kubernetes/cluster/home-automation/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  namespace: home-automation
spec:
  ingressClassName: "nginx"
  rules:
    - host: "emqx.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
  tls:
    - hosts:
        - "emqx.${SECRET_DOMAIN}"
